Fix label dark mode bg inheritance

--- a/resources/public/css/input.less
+++ b/resources/public/css/input.less
@@ -50,6 +50,7 @@
     background-color: inherit;
 }
 .hinput-label {
+    padding-left: 0.6em;
     position: absolute;
     top: 1em;
     background-color: inherit;
